[FIX] #578 java version 에 따른 메소드 수정