@@ -1,6 +1,7 @@
 package gg.recruit.api.user.controller.response;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import gg.recruit.api.user.service.response.RecruitmentListSvcDto;
 import lombok.Getter;
@@ -13,7 +14,7 @@ public class ActiveRecruitmentListResDto {
 	private Integer totalPage;
 
 	public ActiveRecruitmentListResDto(RecruitmentListSvcDto dto) {
-		this.recruitments = dto.getRecruitments().stream().map(RecruitmentDto::new).toList();
+		this.recruitments = dto.getRecruitments().stream().map(RecruitmentDto::new).collect(Collectors.toList());
 		this.totalPage = dto.getTotalPage();
 	}
 }
